.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:59:41 **** Incremental Build of configuration Debug for project HM-10_CC2541_ZS-040 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'USART2_SendChar':
../Core/Src/main.c:74:16: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   74 | int main(void) {
      |                ^
../Core/Src/main.c:148:31: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  148 | void SystemClock_Config(void) {
      |                               ^
../Core/Src/main.c:191:39: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  191 | static void MX_USART2_UART_Init(void) {
      |                                       ^
../Core/Src/main.c:222:32: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  222 | static void MX_GPIO_Init(void) {
      |                                ^
../Core/Src/main.c:235:57: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  235 | void HAL_UART_RxCpltCallback(UART_HandleTypeDef *huart) {
      |                                                         ^
../Core/Src/main.c:239:59: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  239 | void sendATCommand(const char *command, uint32_t timeOut) {
      |                                                           ^
../Core/Src/main.c:253:31: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  253 | void USART2_SendChar(char ch) {
      |                               ^
../Core/Src/main.c:258:31: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  258 | char USART2_ReceiveChar(void) {
      |                               ^
../Core/Src/main.c:270:26: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  270 | void Error_Handler(void) {
      |                          ^
../Core/Src/main.c:61:6: error: old-style parameter declarations in prototyped function definition
   61 | void USART2_SendChar(char ch)
      |      ^~~~~~~~~~~~~~~
../Core/Src/main.c:296: error: expected '{' at end of input
../Core/Src/main.c: At top level:
../Core/Src/main.c:56:13: warning: 'MX_GPIO_Init' declared 'static' but never defined [-Wunused-function]
   56 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:57:13: warning: 'MX_USART2_UART_Init' declared 'static' but never defined [-Wunused-function]
   57 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
23:00:36 **** Incremental Build of configuration Debug for project HM-10_CC2541_ZS-040 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'sendATCommand':
../Core/Src/main.c:244:36: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  244 |         HAL_UART_Transmit(&huart2, command, strlen(command), timeOut);
      |                                    ^~~~~~~
      |                                    |
      |                                    const char *
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:745:79: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'const char *'
  745 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~~~~~~~^~~~~
../Core/Src/main.c:245:25: warning: passing argument 1 of 'CDC_Transmit_FS' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  245 |         CDC_Transmit_FS(command, strlen(command));
      |                         ^~~~~~~
../Core/Src/main.c:59:41: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'const char *'
   59 | extern uint8_t CDC_Transmit_FS(uint8_t *Buf, uint16_t Len);
      |                                ~~~~~~~~~^~~
../Core/Src/main.c:248:35: warning: pointer targets in passing argument 2 of 'HAL_UART_Receive' differ in signedness [-Wpointer-sign]
  248 |         HAL_UART_Receive(&huart2, response, RESPONSE_BUFFER_SIZE, timeOut);
      |                                   ^~~~~~~~
      |                                   |
      |                                   char *
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:746:72: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'char *'
  746 | HAL_StatusTypeDef HAL_UART_Receive(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                               ~~~~~~~~~^~~~~
../Core/Src/main.c:249:25: warning: pointer targets in passing argument 1 of 'CDC_Transmit_FS' differ in signedness [-Wpointer-sign]
  249 |         CDC_Transmit_FS(response, strlen(response));
      |                         ^~~~~~~~
      |                         |
      |                         char *
../Core/Src/main.c:59:41: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'char *'
   59 | extern uint8_t CDC_Transmit_FS(uint8_t *Buf, uint16_t Len);
      |                                ~~~~~~~~~^~~
arm-none-eabi-gcc -o "HM-10_CC2541_ZS-040.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ACER\STM32CubeIDE\workspace_1.14.1\BLE_CC2541\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="HM-10_CC2541_ZS-040.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: HM-10_CC2541_ZS-040.elf
 
arm-none-eabi-size  HM-10_CC2541_ZS-040.elf 
arm-none-eabi-objdump -h -S HM-10_CC2541_ZS-040.elf  > "HM-10_CC2541_ZS-040.list"
   text	   data	    bss	    dec	    hex	filename
  33036	    252	   8788	  42076	   a45c	HM-10_CC2541_ZS-040.elf
Finished building: default.size.stdout
 
Finished building: HM-10_CC2541_ZS-040.list
 
23:00:40 **** Incremental Build of configuration Debug for project HM-10_CC2541_ZS-040 ****
make -j8 all 
arm-none-eabi-size  HM-10_CC2541_ZS-040.elf 
   text	   data	    bss	    dec	    hex	filename
  33036	    252	   8788	  42076	   a45c	HM-10_CC2541_ZS-040.elf
Finished building: default.size.stdout
 
